# counting_pseudochord_arrangements

./: Cargo.toml  README.md
src/: arr_counter.rs  main.rs
