[package]
name = "count_arrangements"
version = "0.1.0"
edition = "2021"
authors = ["Justin Dallant <justin.dallant@ulb.be>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
opt-level = 3  

[dependencies]
rand = "0.8.5"
num = "0.4.1"
rustc-hash ="1.1.0"
rayon = "1.8.0"
clap = { version = "4.4.4", features = ["derive"] }
colored = "2"
regex = "1.9"
